--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - rm google-chrome.deb
   pre:
     - bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
-    - ember:install
+    - bundle exec rake ember:install
   cache_directories:
     - "vendor/bundle"
     - "frontend/bower_components"
