--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,22 @@
 version: 2
- jobs:
-   build:
-     working_directory: ~/ember-rails-example
-     docker:
-       - image: circleci/ruby:2.4-node-browsers
-     steps:
-       - checkout
-       - run: echo "hello world"
+jobs:
+  build:
+    working_directory: ~/ember-rails-example
+    docker:
+      - image: circleci/ruby:2.4-node-browsers
+    steps:
+      - checkout
+      - run: echo "hello world"
+    # dependencies:
+    #   override:
+    #     - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    #     - sudo dpkg -i google-chrome.deb
+    #     - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
+    #     - rm google-chrome.deb
+    #   pre:
+    #     - bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+    #     - bundle exec rake ember:install
+    #   cache_directories:
+    #     - "vendor/bundle"
+    #     - "frontend/bower_components"
+    #     - "frontend/node_modules"
