--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: get-chrome
-          command: curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          name: chrome-add-apt
+          command: sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
       - run:
-          name: install-chrome
-          command: sudo dpkg -i google-chrome.deb
+          name: chrome-apt-update
+          command: sudo apt-get update
+      - run:
+          name: chrome-install
+          command: sudo apt-get --only-upgrade install google-chrome-stable
       - run:
           name: get-node
           command: curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
