--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,10 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-bundle-deps-{{ checksum "Gemfile.lock" }}
             - v1-yarn-deps-{{ checksum "frontend/yarn.lock" }}
+      - restore_cache:
+          keys:
+            - v1-bundle-deps-{{ checksum "Gemfile.lock" }}
       - run:
           name: chrome-add-apt
           command: sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
