--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,6 @@
-
 machine:
   node:
-    version: 4.8.3
+    version: 6.11.0
 
 dependencies:
   override:
@@ -16,3 +15,8 @@ dependencies:
     - "vendor/bundle"
     - "frontend/bower_components"
     - "frontend/node_modules"
+
+test:
+  override:
+    - bundle exec rake spec
+    - bundle exec rake ember:test
