--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,7 @@ jobs:
   build:
     working_directory: ~/ember-rails-example
     docker:
-      - image: circleci/ruby:2.4
-      # Circle's ruby+node+browsers image almost works for us,
-      # but it has node 8, which ember doesn't support yet.
-      # - image: circleci/ruby:2.4-node-browsers
+      - image: circleci/ruby:2.4-node-browsers
     steps:
       - checkout
       - restore_cache:
@@ -24,12 +21,6 @@ jobs:
       - run:
           name: chrome-install
           command: sudo apt-get install google-chrome-stable
-      - run:
-          name: get-node
-          command: curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-      - run:
-          name: install-node
-          command: sudo apt-get install -y nodejs
       - run:
           name: bundle
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
